updates after async

--- a/demo notebook.ipynb
+++ b/demo notebook.ipynb
@@ -13008,6 +13008,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Threading"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 139,
    "metadata": {},
@@ -13181,6 +13188,531 @@
     "%%time\n",
     "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "    executor.map(work, [1, 2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://intra.kth.se/styrning/styrdokument/regler/overgripande-styrning-1.536023'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import requests_html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !python3 -m pip install requests requests_html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = requests_html.HTMLSession()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = session.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__attrs__',\n",
+       " '__bool__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__enter__',\n",
+       " '__eq__',\n",
+       " '__exit__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__nonzero__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_content',\n",
+       " '_content_consumed',\n",
+       " '_from_response',\n",
+       " '_html',\n",
+       " '_next',\n",
+       " 'apparent_encoding',\n",
+       " 'close',\n",
+       " 'connection',\n",
+       " 'content',\n",
+       " 'cookies',\n",
+       " 'elapsed',\n",
+       " 'encoding',\n",
+       " 'headers',\n",
+       " 'history',\n",
+       " 'html',\n",
+       " 'is_permanent_redirect',\n",
+       " 'is_redirect',\n",
+       " 'iter_content',\n",
+       " 'iter_lines',\n",
+       " 'json',\n",
+       " 'links',\n",
+       " 'next',\n",
+       " 'ok',\n",
+       " 'raise_for_status',\n",
+       " 'raw',\n",
+       " 'reason',\n",
+       " 'request',\n",
+       " 'session',\n",
+       " 'status_code',\n",
+       " 'text',\n",
+       " 'url']"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://intra.kth.se/styrning/styrdokument/regler/overgripande-styrning-1.536023'"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdfs = [\"https://kth.se\" + url for url in response.html.links if url.endswith('.pdf')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_pdf(url):\n",
+    "    local_file = os.path.basename(url)\n",
+    "    print(local_file)\n",
+    "    with open(local_file, 'wb') as pdf:\n",
+    "        pdf.write(requests.get(url).content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Personalpolicy.pdf\n",
+      "Vidaredelegation_fr%C3%A5n_vicerektor_f%C3%B6r_forskning_180601.pdf\n",
+      "Arbetsordning-vid-KTH.pdf\n",
+      "Universitetsstyrelsens_riktlinje_f%C3%B6r_internrevisionen.pdf\n",
+      "Policy_f%C3%B6r_h%C3%A5llbar_utveckling.pdf\n",
+      "Policy-fo%CC%88r-digitalisering-pa%CC%8A-KTH.pdf\n",
+      "L%C3%A4sanvisningar%20till%20etisk%20policy%20f%C3%B6r%20KTH%20FR%202017-02-08.pdf\n",
+      "riktlinje_hantering_av_risker_vid_KTH.pdf\n",
+      "Rutin-om-%C3%A4rendehantering-vid-rektors-besluts-och-informationsm%C3%B6te.pdf\n",
+      "KTHs_%C3%B6vergripande_h%C3%A5llbarhetsm%C3%A5l_2016-2020.pdf\n",
+      "Riktlinje-om-styrdokument.pdf\n",
+      "Delegationsordning%20vid%20KTH.pdf\n",
+      "Anvisning_for_hantering_av_orverklaganden.pdf\n",
+      "S%C3%A4kerhetspolicy.pdf\n",
+      "Handl%C3%A4ggningsordning-f%C3%B6r-arbete-med-styrdokument.pdf\n",
+      "Kvalitetspolicy.pdf\n",
+      "Riktlinje%20f%C3%B6r%20anv%C3%A4ndning%20av%20spr%C3%A5k%20vid%20KTH.pdf\n",
+      "Anvisning_om_utn%C3%A4mning_av_hedersdoktor.pdf\n",
+      "forvaltningschef_vidaredelegationer.pdf\n",
+      "Etisk_policy.pdf\n",
+      "CPU times: user 859 ms, sys: 516 ms, total: 1.38 s\n",
+      "Wall time: 3.32 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for url in pdfs:\n",
+    "    download_pdf(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Personalpolicy.pdf\n",
+      "Vidaredelegation_fr%C3%A5n_vicerektor_f%C3%B6r_forskning_180601.pdf\n",
+      "Arbetsordning-vid-KTH.pdf\n",
+      "Universitetsstyrelsens_riktlinje_f%C3%B6r_internrevisionen.pdf\n",
+      "Policy_f%C3%B6r_h%C3%A5llbar_utveckling.pdf\n",
+      "Policy-fo%CC%88r-digitalisering-pa%CC%8A-KTH.pdf\n",
+      "L%C3%A4sanvisningar%20till%20etisk%20policy%20f%C3%B6r%20KTH%20FR%202017-02-08.pdf\n",
+      "riktlinje_hantering_av_risker_vid_KTH.pdf\n",
+      "Rutin-om-%C3%A4rendehantering-vid-rektors-besluts-och-informationsm%C3%B6te.pdf\n",
+      "KTHs_%C3%B6vergripande_h%C3%A5llbarhetsm%C3%A5l_2016-2020.pdf\n",
+      "Riktlinje-om-styrdokument.pdf\n",
+      "Delegationsordning%20vid%20KTH.pdf\n",
+      "Anvisning_for_hantering_av_orverklaganden.pdf\n",
+      "S%C3%A4kerhetspolicy.pdf\n",
+      "Handl%C3%A4ggningsordning-f%C3%B6r-arbete-med-styrdokument.pdf\n",
+      "Kvalitetspolicy.pdf\n",
+      "Riktlinje%20f%C3%B6r%20anv%C3%A4ndning%20av%20spr%C3%A5k%20vid%20KTH.pdf\n",
+      "Anvisning_om_utn%C3%A4mning_av_hedersdoktor.pdf\n",
+      "forvaltningschef_vidaredelegationer.pdf\n",
+      "Etisk_policy.pdf\n",
+      "CPU times: user 1 s, sys: 688 ms, total: 1.69 s\n",
+      "Wall time: 1.02 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "    executor.map(download_pdf, pdfs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import multiprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Work...\n",
+      "Done in 1 seconds\n",
+      "Work...\n",
+      "Done in 2 seconds\n",
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "work(1)\n",
+    "work(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process1 = multiprocessing.Process(target=work, args=[1])\n",
+    "process2 = multiprocessing.Process(target=work, args=[2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Work...\n",
+      "Work...\n",
+      "Done in 1 seconds\n",
+      "Done in 2 seconds\n",
+      "CPU times: user 0 ns, sys: 297 ms, total: 297 ms\n",
+      "Wall time: 2.33 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "process1.start()\n",
+    "process2.start()\n",
+    "\n",
+    "process1.join()\n",
+    "process2.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Work...\n",
+      "Done in 0 secondsWork...\n",
+      "\n",
+      "Work...\n",
+      "Work...\n",
+      "Work...\n",
+      "Done in 1 seconds\n",
+      "Done in 2 seconds\n",
+      "Done in 3 seconds\n",
+      "Done in 4 seconds\n",
+      "CPU times: user 15.6 ms, sys: 812 ms, total: 828 ms\n",
+      "Wall time: 4.91 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "processes = []\n",
+    "for i in range(5):\n",
+    "    p = multiprocessing.Process(target=work, args=[i])\n",
+    "    processes.append(p)\n",
+    "    p.start()\n",
+    "    \n",
+    "for p in processes:\n",
+    "    p.join()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Work...Work...Work...Work...\n",
+      "\n",
+      "\n",
+      "\n",
+      "Done in 1 seconds\n",
+      "Done in 2 seconds\n",
+      "Done in 3 seconds\n",
+      "Done in 4 seconds\n",
+      "CPU times: user 15.6 ms, sys: 1.05 s, total: 1.06 s\n",
+      "Wall time: 5.18 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "with concurrent.futures.ProcessPoolExecutor() as executor:\n",
+    "    executor.map(work, [1,2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## async"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing cooking_sync.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %%writefile cooking_sync.py\n",
+    "def now(what):\n",
+    "    when = round(time.time() - start)\n",
+    "    print(when, what)\n",
+    "\n",
+    "def prepare_salad():\n",
+    "    now(\"Cut salad\")\n",
+    "    time.sleep(4)\n",
+    "    now(\"Rinse salad\")\n",
+    "    time.sleep(1)\n",
+    "    now(\"Salad done\")\n",
+    "\n",
+    "def prepare_potatoes():\n",
+    "    now(\"Peel potatoes\")\n",
+    "    time.sleep(5)\n",
+    "    now(\"Boil potatoes\")\n",
+    "    time.sleep(20)\n",
+    "    now(\"Potatoes done\")\n",
+    "\n",
+    "def prepare_steak():\n",
+    "    now(\"Thaw steak\")\n",
+    "    time.sleep(18)\n",
+    "    now(\"Fry steak\")\n",
+    "    time.sleep(2)\n",
+    "    now(\"Steak done\")\n",
+    "\n",
+    "def main():\n",
+    "    prepare_salad()\n",
+    "    prepare_potatoes()\n",
+    "    prepare_steak()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Cut salad\n",
+      "4 Rinse salad\n",
+      "5 Salad done\n",
+      "5 Peel potatoes\n",
+      "10 Boil potatoes\n",
+      "30 Potatoes done\n",
+      "30 Thaw steak\n",
+      "48 Fry steak\n",
+      "50 Steak done\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# %load cooking_async.py\n",
+    "import asyncio\n",
+    "import time\n",
+    "\n",
+    "def now(what):\n",
+    "    when = round(time.time() - start)\n",
+    "    print(when, what)\n",
+    "\n",
+    "async def prepare_salad():\n",
+    "    now(\"Cut salad\")\n",
+    "    time.sleep(4)\n",
+    "    now(\"Rinse salad\")\n",
+    "    time.sleep(1)\n",
+    "    now(\"Salad done\")\n",
+    "\n",
+    "async def prepare_potatoes():\n",
+    "    now(\"\\tPeel potatoes\")\n",
+    "    time.sleep(5)\n",
+    "    now(\"\\tBoil potatoes\")\n",
+    "    await asyncio.sleep(20)\n",
+    "    now(\"\\tPotatoes done\")\n",
+    "\n",
+    "async def prepare_steak():\n",
+    "    now(\"\\t\\tThaw steak\")\n",
+    "    await asyncio.sleep(18)\n",
+    "    now(\"\\t\\tFry steak\")\n",
+    "    await asyncio.sleep(2)\n",
+    "    now(\"\\t\\tSteak done\")\n",
+    "\n",
+    "async def main():\n",
+    "    task2 = asyncio.create_task(prepare_potatoes())\n",
+    "    task3 = asyncio.create_task(prepare_steak())\n",
+    "    task1 = asyncio.create_task(prepare_salad())\n",
+    "\n",
+    "    await task1\n",
+    "    await task2\n",
+    "    await task3\n",
+    "\n",
+    "start = time.time()\n",
+    "asyncio.run(main())\n",
+    "\n",
+    "# for python < 3.7\n",
+    "\n",
+    "#loop = asyncio.get_event_loop()\n",
+    "#loop.run_until_complete(main())\n",
+    "#loop.close()"
    ]
   },
   {
